# election-provider-playground

node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  service.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
